2nd attempt to fix image not showing up

--- a/styles/newstyle.css
+++ b/styles/newstyle.css
@@ -27,7 +27,7 @@ details > div {
 }
 
 .imagespacer.image3 {
-  background-image: url("../images/bigPhotos/weSnowman.jpg");
+  background-image: url("../images/bigPhotos/weSnowman.JPG");
   background-position: 0% 0%;
 }
 
@@ -36,5 +36,5 @@ details > div {
 }
 
 .imagespacer.image5 {
-  background-image: url("../images/bigPhotos/weHottub.jpg");
+  background-image: url("../images/bigPhotos/weHottub.JPG");
 }
